--- a/videos.html
+++ b/videos.html
@@ -67,7 +67,7 @@
             </ul>
 
             <p>
-              Costumava editar e criar vídeos casualmente por hobbie e para aprimorar meus conhecimentos!
+              Costumava editar e criar vídeos casualmente para aprimorar meus conhecimentos!
             </p>
           </div>
 
